--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -2,3 +2,10 @@
     background-color: red;
     color: #ffffff;
 }
+.card{
+    width: 200px;
+    height: 400px;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 0px 1px #ffffff;
+}
